[java] fix bat files for newer java